--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         // Adiciona manualmente informações sobre os arquivos na tabela
-        adicionarLinhaTabela('ImportarTituloAT_1', '/xml/ImportarTituloAT_1.XML');
+        adicionarLinhaTabela('ImportarTituloAT_1', 'xml/ImportarTituloAT_1.XML');
     </script>
 
 </body>
